--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -1,8 +1,8 @@
 <h1>Registration Form</h1>
 <!-- {{ diagnostics }} -->
 <div class="alert alert-danger" *ngIf="loginFailed">
-    <span *ngIf="err.status === 409">User Already Exists, please choose another username!</span>
-    <span *ngIf="err.status !== 409">  Register failed, please try again! {{err.message | uppercase}}</span>
+    <span *ngIf="err['status'] === 409">User Already Exists, please choose another username!</span>
+    <span *ngIf="err['status'] !== 409">  Register failed, please try again! {{err['message'] | uppercase}}</span>
 </div>
 <form #registerForm="ngForm" (ngSubmit)="register()" >
   <div class="form-group">
@@ -33,7 +33,7 @@
     <label for="confirmPassword">Confirm Password</label>
     <input type="password" class="form-control"
     name="confirmPassword" 
-    [(ngModel)]="model.confirmPassword"
+    [(ngModel)]="model['confirmPassword']"
     #confirmPassword="ngModel"
     required>
     <div class="alert alert-danger" 
@@ -67,6 +67,12 @@
     >
       Last Name is required and must start with capital letter
     </div>
+  </div>
+  <div class="form-group">
+    <label for="color">Team Calendar Color</label>
+    <input name="color" class="form-control" [(colorPicker)]="model.color" [value]="model.color === '#F39347' ? 'Please select a color!' : model.color" (colorPickerSelect)="onColorChange($event)"
+
+      [style.background]="model.color"/>
   </div>
   <div class="form-group">
     <label for="email">Email Address</label>
